// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render correctly 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "minWidth": 30,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {},
        [
          {
            "alignItems": "center",
            "alignSelf": "auto",
            "display": "flex",
            "justifyContent": "center",
          },
          {
            "borderRadius": 5,
          },
          undefined,
        ],
      ]
    }
  />
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1890ff",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 20,
        "minWidth": 20,
        "paddingBottom": 3,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 3,
        "position": "absolute",
        "right": -4,
        "top": -4,
        "transform": [
          {
            "scale": 0,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Badge should render correctly with inner component 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "minWidth": 30,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {},
        [
          {
            "alignItems": "center",
            "alignSelf": "auto",
            "display": "flex",
            "justifyContent": "center",
          },
          {
            "borderRadius": 5,
          },
          undefined,
        ],
      ]
    }
  >
    <View />
  </View>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1890ff",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 20,
        "minWidth": 20,
        "paddingBottom": 3,
        "paddingLeft": 5,
        "paddingRight": 5,
        "paddingTop": 3,
        "position": "absolute",
        "right": -4,
        "top": -4,
        "transform": [
          {
            "scale": 0,
          },
        ],
      }
    }
  />
</View>
`;
